fix: RuboCopのRails向けルールを無効化
- Rails/Pluck, Rails/PluckInWhere を無効化
- 純粋なRubyアプリケーションではpluckメソッドは使用不可

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,3 +61,10 @@ RSpec/NestedGroups:
 # This is a Rails-specific cop that doesn't apply to CLI applications
 Airbnb/ClassOrModuleDeclaredInWrongFile:
   Enabled: false
+
+# Rails-specific cops that don't apply to CLI applications
+Rails/Pluck:
+  Enabled: false
+
+Rails/PluckInWhere:
+  Enabled: false
