fix: CI環境でカバレッジ測定を有効化してテスト失敗を修正
SimpleCovのminimum_coverage設定が原因でCIが失敗していたため、
テスト実行時にCOVERAGE環境変数を設定するよう修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
 
     - name: Run tests
       run: bundle exec rspec
+      env:
+        COVERAGE: true
 
     - name: Upload coverage reports
       if: matrix.ruby-version == '3.3'
