--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,25 +5,11 @@
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {},
-    "ghcr.io/rails/devcontainer/features/activestorage": {},
     "ghcr.io/devcontainers/features/node:1": {},
-    "ghcr.io/devcontainers/features/python:1": {},
-    "ghcr.io/devcontainers/features/aws-cli:1.1.2": {},
-    "ghcr.io/devcontainers/features/sshd:1": {
-      "version": "latest"
-    }
+    "ghcr.io/devcontainers-extra/features/direnv:1": {},
+    "ghcr.io/schlich/devcontainer-features/playwright:0": {}
   },
-  "containerEnv": {
-    "KAMAL_REGISTRY_USERNAME": "$KAMAL_REGISTRY_USERNAME",
-    "KAMAL_REGISTRY_PASSWORD": "$KAMAL_REGISTRY_PASSWORD",
-    "VITE_RUBY_HOST": "0.0.0.0",
-    "SELENIUM_URL": "http://selenium:4444/",
-    "PYTHON": "/usr/bin/python3"
-  },
-  "forwardPorts": [
-    5100,
-    3036
-  ],
+  "containerEnv": {},
   "mounts": [
     {
       "source": "${localEnv:HOME}/.claude",
