feat: 設定ファイルでtmux実行を制御するオプション追加 (#28)
- CLIコマンドに --no-tmux オプションを追加
- 環境変数 SOBA_NO_TMUX のサポート追加
- 設定優先順位: CLIオプション > 環境変数 > 設定ファイル
- 後方互換性を維持（デフォルト値true）

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -18,6 +18,10 @@ workflow:
   # Polling interval in seconds
   interval: 60
 
+  # Use tmux for Claude execution (default: true)
+  # Set to false for CI/CD environments or debugging
+  use_tmux: true
+
   # Maximum concurrent workflows
   max_concurrent: 3
 
