fix: レビュー指摘事項への対応
- GitHubTokenProviderのlast_command_statusメソッドを修正（がnilの場合のフォールバック処理を追加）
- Ruby 3.0互換性のためArray#exclude?をArray#include?の否定形に変更
- init.rbのデフォルトモードでtokenフィールドが設定されない問題を修正
- テストケースにGitHubTokenProviderのモックを追加してテスト環境に依存しないように修正
- Rubocop違反を修正（Rails/NegateIncludeルールを無効化）

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,6 +48,10 @@ Style/GlobalVars:
   Exclude:
     - 'bin/soba'
 
+# This is not a Rails application
+Rails/NegateInclude:
+  Enabled: false
+
 # For RSpec
 RSpec/MultipleExpectations:
   Max: 3
