fix: 追加のテスト修正とRubocop設定調整
- init.rbでauth_methodとphase設定をYAMLに正しく出力するよう修正
- Rails/Presentルールを無効化（純粋Rubyアプリのため）
- init_spec.rbに追加のモック設定を追加

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,6 +52,9 @@ Style/GlobalVars:
 Rails/NegateInclude:
   Enabled: false
 
+Rails/Present:
+  Enabled: false
+
 # For RSpec
 RSpec/MultipleExpectations:
   Max: 3
