fix: レビュー指摘事項への対応(部分対応)
- GitHubTokenProviderのnilチェック改善
  - last_command_statusメソッドでnilの場合のフォールバック処理を追加
  - $CHILD_STATUSと$LAST_CHILD_STATUSが両方nilの場合にスタブオブジェクトを返す
- Rubocop設定へのコメント追加
  - Rails専用ルールを無効化する理由を明記
  - 純粋なRuby CLIアプリケーションであることを説明
- phase設定の空ハッシュ処理を改善
  - 空のphase設定をYAMLに出力しないよう修正

注: phase設定のデフォルト値に関する一部のテストは現在も失敗中

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,12 +48,13 @@ Style/GlobalVars:
   Exclude:
     - 'bin/soba'
 
-# This is not a Rails application
+# Disable Rails-specific rules since this is a pure Ruby CLI application, not a Rails app
+# These cops are incorrectly triggered by rubocop-airbnb but don't apply to CLI tools
 Rails/NegateInclude:
-  Enabled: false
+  Enabled: false  # Rails/NegateInclude expects Rails-specific !include? => exclude? conversion
 
 Rails/Present:
-  Enabled: false
+  Enabled: false  # Rails/Present expects Rails-specific .present? method usage
 
 # For RSpec
 RSpec/MultipleExpectations:
@@ -69,9 +70,9 @@ RSpec/NestedGroups:
 Airbnb/ClassOrModuleDeclaredInWrongFile:
   Enabled: false
 
-# Rails-specific cops that don't apply to CLI applications
+# Additional Rails-specific cops that don't apply to pure Ruby CLI applications
 Rails/Pluck:
-  Enabled: false
+  Enabled: false  # Rails/Pluck is for ActiveRecord query optimization, not applicable here
 
 Rails/PluckInWhere:
-  Enabled: false
+  Enabled: false  # Rails/PluckInWhere is for ActiveRecord query optimization, not applicable here
