fix: YAMLファイル生成ロジックのリファクタリングとRubocopコメント改善
レビュー指摘事項への対応:
- config.yml生成ロジックをシンプルにリファクタリング
  - HEREDOCによる複雑なインデント処理を廃止
  - 配列ベースの明確な生成方法に変更
  - phaseセクションが正しくトップレベルに配置されるよう修正
- Rubocop設定のコメントをより詳細に改善
  - Rails固有ルールを無効化する理由を明確化
  - 純粋なRuby CLIアプリケーションであることを説明

テスト結果: 全788テストが成功

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,12 +49,15 @@ Style/GlobalVars:
     - 'bin/soba'
 
 # Disable Rails-specific rules since this is a pure Ruby CLI application, not a Rails app
-# These cops are incorrectly triggered by rubocop-airbnb but don't apply to CLI tools
+# These cops are incorrectly triggered by rubocop-airbnb which includes Rails cops,
+# but they don't apply to CLI tools that don't have Rails dependencies
 Rails/NegateInclude:
   Enabled: false  # Rails/NegateInclude expects Rails-specific !include? => exclude? conversion
+                  # In pure Ruby, we use !include? instead of Rails' exclude? method
 
 Rails/Present:
   Enabled: false  # Rails/Present expects Rails-specific .present? method usage
+                  # In pure Ruby, we use standard methods like !nil? && !empty? instead
 
 # For RSpec
 RSpec/MultipleExpectations:
@@ -71,8 +74,9 @@ Airbnb/ClassOrModuleDeclaredInWrongFile:
   Enabled: false
 
 # Additional Rails-specific cops that don't apply to pure Ruby CLI applications
+# These are ActiveRecord/database-related cops that have no relevance to a CLI tool
 Rails/Pluck:
-  Enabled: false  # Rails/Pluck is for ActiveRecord query optimization, not applicable here
+  Enabled: false  # Rails/Pluck is for ActiveRecord query optimization, not applicable to CLI tools
 
 Rails/PluckInWhere:
-  Enabled: false  # Rails/PluckInWhere is for ActiveRecord query optimization, not applicable here
+  Enabled: false  # Rails/PluckInWhere is for ActiveRecord query optimization, not applicable to CLI tools
